# coracle-oracles.github.io

./: .gitignore  10-principals.html  10-principles.html  CLAUDE.md  CNAME  Makefile  README.md  index.html  manage.py  pretix.cfg  pyproject.toml  seed.sql  social.html  survival-guide.html  ticket-info.html  tickets.json
config/: settings.py
coracle/: middleware.py  settings.py  urls.py
coracle_pages/: __init__.py  apps.py  urls.py  views.py
coracle_pages/templates/coracle_pages/: base.html  dashboard.html  index.html  principles.html  survival_guide.html  ticket_info.html
coracle_plugin/: __init__.py  apps.py  views.py
coracle_plugin/templates/coracle_plugin/: base.html  index.html  principles.html  survival_guide.html  ticket_info.html
core/: admin.py  apps.py  enums.py  forms.py  models.py  tasks.py  tickets.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_orderitem_product_id.py  0002_role_shift_shiftassignment.py  0003_remove_shift_event.py  0004_shift_unique_role_time.py  0005_event_max_shifts_per_user.py
core/templates/core/: base.html  checkout_cancel.html  checkout_success.html  index.html  login.html  my_tickets.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  principles.html  register.html  shifts.html  survival_guide.html  ticket_info.html  tickets.html
css/: styles.css
js/: scripts.js
tmpl/: 10-principles.html  _template.html  build.py  index.html  survival-guide.html  ticket-info.html
