[project]
name = "coracle"
version = "0.1.0"
description = "Coracle Regional Burn website"
requires-python = ">=3.10,<3.14"
dependencies = []

[project.entry-points."pretix.plugin"]
coracle = "coracle_plugin:CoraclePluginConfig"

[tool.setuptools]
packages = ["coracle_plugin"]

[tool.uv]
# pretix is installed from local subtree
find-links = ["pretix"]

[tool.uv.sources]
pretix = { path = "pretix", editable = true }
