[project]
name = "coracle"
version = "0.1.0"
description = "Coracle Regional Burn website"
requires-python = ">=3.10,<3.14"
dependencies = []

[tool.setuptools]
packages = ["coracle", "coracle_pages"]

[tool.uv]
# pretix is installed from local subtree
find-links = ["pretix"]

[tool.uv.sources]
pretix = { path = "pretix", editable = true }
